chores: added certificates

--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -16,11 +16,11 @@ http {
     }
     
     upstream service_admin {
-        server service_admin:8080;
+        server service_admin:443;
     }
 
     upstream service_auth {
-        server service_auth:8080;
+        server service_auth:443;
     }
 
     server {
@@ -33,7 +33,7 @@ http {
         ssl_verify_client off;
 
         location ^~ /admin/ {
-            proxy_pass http://service_admin/admin/;
+            proxy_pass https://service_admin/admin/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -41,7 +41,7 @@ http {
         }
     
         location ^~ /auth/ {
-            proxy_pass http://service_auth/auth/;
+            proxy_pass https://service_auth/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
