--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -7,35 +7,35 @@ http {
     proxy_headers_hash_bucket_size 128;
 
     upstream service_profile {
-        server service_profile:8080;
+        server service_profile:443;
     }
 
     upstream service_auth {
-        server service_auth:8080;
+        server service_auth:443;
     }
 
     upstream service_auction {
-        server service_auction:8080;
+        server service_auction:443;
     }
 
     upstream service_currency {
-        server service_currency:8080;
+        server service_currency:443;
     }
 
     upstream service_feedback {
-        server service_feedback:8080;
+        server service_feedback:443;
     }
 
     upstream service_gacha {
-        server service_gacha:8080;
+        server service_gacha:443;
     }
 
     upstream service_inventory {
-        server service_inventory:8080;
+        server service_inventory:443;
     }
 
     upstream service_pvp {
-        server service_pvp:8080;
+        server service_pvp:443;
     }
 
     server {
@@ -48,7 +48,7 @@ http {
         ssl_verify_client off;
 
         location ^~ /profile/ {
-            proxy_pass http://service_profile/profile/;
+            proxy_pass https://service_profile/profile/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -57,7 +57,7 @@ http {
         }
 
         location ^~ /auth/ {
-            proxy_pass http://service_auth/auth/;
+            proxy_pass https://service_auth/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -67,7 +67,7 @@ http {
         }
 
         location ^~ /auction/ {
-            proxy_pass http://service_auction/auction/;
+            proxy_pass https://service_auction/auction/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -76,7 +76,7 @@ http {
         }
 
         location ^~ /currency/ {
-            proxy_pass http://service_currency/currency/;
+            proxy_pass https://service_currency/currency/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -85,7 +85,7 @@ http {
         }
 
         location ^~ /feedback/ {
-            proxy_pass http://service_feedback/feedback/;
+            proxy_pass https://service_feedback/feedback/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -94,7 +94,7 @@ http {
         }
 
         location ^~ /gacha/ {
-            proxy_pass http://service_gacha/gacha/;
+            proxy_pass https://service_gacha/gacha/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -103,7 +103,7 @@ http {
         }
 
         location ^~ /inventory/ {
-            proxy_pass http://service_inventory/inventory/;
+            proxy_pass https://service_inventory/inventory/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -113,7 +113,7 @@ http {
         }
 
         location ^~ /pvp/ {
-            proxy_pass http://service_pvp/pvp/;
+            proxy_pass https://service_pvp/pvp/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
