--- a/db_manager/.env
+++ b/db_manager/.env
@@ -3,6 +3,6 @@ MYSQL_DB=gacha_test_db
 MYSQL_USER=gacha_test_user
 MYSQL_PASSWORD=gacha_test_password
 
-FLASK_SECRET_KEY=prova
+FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 FLASK_DEBUG=1
 FLASK_ENV=development
