--- a/services/admin/.env
+++ b/services/admin/.env
@@ -1,3 +1,3 @@
-FLASK_SECRET_KEY=prova
+FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 FLASK_DEBUG=1
 FLASK_ENV=development
