--- a/services/profile/.env
+++ b/services/profile/.env
@@ -1,4 +1,4 @@
-FLASK_SECRET_KEY=prova
+FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 FLASK_DEBUG=1
 FLASK_ENV=development
 
