added health check

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -44,8 +44,13 @@ http {
         
         ssl_certificate         /etc/nginx/ssl/api-gateway-cert.pem;
         ssl_certificate_key     /etc/nginx/ssl/api-gateway-key.pem;
-        ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+        ssl_client_certificate  /etc/nginx/ssl/api-gateways-ca-cert.pem;
         ssl_verify_client off;
+
+        location /health_check {
+            return 200 "OK\n";
+            add_header Content-Type text/plain;
+        }
 
         location ^~ /profile/ {
             proxy_pass https://service_profile/profile/;
