--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+  ########################## API GATEWAYS
   api_gateway_public:
     image: nginx:alpine
     container_name: unipi-gatchaandgames-api_gateway_public
@@ -19,6 +20,12 @@ services:
       - service_profile
       - service_pvp
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "--cert", "/etc/nginx/ssl/api-gateway-cert.pem", "--key", "/etc/nginx/ssl/api-gateway-key.pem", "--cacert", "/etc/nginx/ssl/api-gateways-ca-cert.pem", "https://localhost/health_check"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
     networks:
       - public_gachaandgames_network
 
@@ -35,9 +42,16 @@ services:
       - service_admin
       - service_auth
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "-f", "--cert", "/etc/nginx/ssl/api-gateway-cert.pem", "--key", "/etc/nginx/ssl/api-gateway-key.pem", "--cacert", "/etc/nginx/ssl/api-gateways-ca-cert.pem", "https://localhost:444/health_check"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 5s
     networks:
       - private_gachaandgames_network
 
+  ########################## REDIS (LOGGING)
   redis:
     image: redis:latest
     container_name: unipi-gatchaandgames-redis
@@ -46,10 +60,17 @@ services:
     volumes:
       - redis_data:/data
     restart: always
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
     networks:
       - private_gachaandgames_network
       - public_gachaandgames_network
 
+  ########################## ADMIN
   service_admin:
     image: service_admin
     build: ./services/admin/
