--- a/services/profile/requirements.txt
+++ b/services/profile/requirements.txt
@@ -1,20 +1,12 @@
-connexion[swagger-ui] >= 2.6.0; python_version>="3.6"
-# 2.3 is the last version that supports python 3.4-3.5
-connexion[swagger-ui] <= 2.3.0; python_version=="3.5" or python_version=="3.4"
-# prevent breaking dependencies from advent of connexion>=3.0
-connexion[swagger-ui] <= 2.14.2; python_version>"3.4"
-# connexion requires werkzeug but connexion < 2.4.0 does not install werkzeug
-# we must peg werkzeug versions below to fix connexion
-# https://github.com/zalando/connexion/pull/1044
-werkzeug == 0.16.1; python_version=="3.5" or python_version=="3.4"
-swagger-ui-bundle >= 0.0.2
-python_dateutil >= 2.6.0
-setuptools >= 21.0.0
-Flask == 2.1.1
-tox == 4.23.2
+connexion[swagger-ui] == 2.14.2
+python_dateutil == 2.9.0
+setuptools >= 75.6.0
+Flask == 2.2.5
 python-dotenv == 1.0.1
-cryptography == 43.0.3
+cryptography == 44.0.0
 pybreaker == 1.2.0
 requests == 2.32.3
-bcrypt == 4.2.0
+bcrypt == 4.2.1
+pyjwt[crypto] == 2.10.1
+redis == 5.2.0
 mysql-connector-python == 9.1.0
