chores: added timeout to requests

--- a/services/auth/.env
+++ b/services/auth/.env
@@ -1,6 +1,9 @@
 FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 FLASK_DEBUG=1
 
+REQUESTS_TIMEOUT=3
+DATABASE_TIMEOUT=3
+
 MYSQL_HOST=service_auth_db_proxy
 MYSQL_USER=gacha_test_user
 MYSQL_PASSWORD=gacha_test_password
