--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -37,6 +37,7 @@ http {
     upstream service_pvp {
         server service_pvp:443;
     }
+    
 
     server {
         listen 443 ssl;
@@ -46,6 +47,15 @@ http {
         ssl_certificate_key     /etc/nginx/ssl/apigateways-key.pem;
         ssl_client_certificate  /etc/nginx/ssl/apigateways-ca-cert.pem;
         ssl_verify_client off;
+
+        location ^~ /cdn/ {
+            proxy_pass http://cdn:8080/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+        }
 
         location /health_check {
             return 200 "OK\n";
