fixes cdn: need to fix health check with https

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -6,6 +6,10 @@ http {
     proxy_headers_hash_max_size 1024;
     proxy_headers_hash_bucket_size 128;
 
+    upstream cdn {
+        server cdn:443;
+    }
+
     upstream service_profile {
         server service_profile:443;
     }
@@ -48,18 +52,18 @@ http {
         ssl_client_certificate  /etc/nginx/ssl/apigateways-ca-cert.pem;
         ssl_verify_client off;
 
+        location /health_check {
+            return 200 "OK\n";
+            add_header Content-Type text/plain;
+        }
+
         location ^~ /cdn/ {
-            proxy_pass http://cdn:8080/;
+            proxy_pass http://cdn/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
-        }
-
-        location /health_check {
-            return 200 "OK\n";
-            add_header Content-Type text/plain;
         }
 
         location ^~ /profile/ {
