--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     container_name: unipi-gatchaandgames-cdn
     env_file: ./cdn/.env
     volumes:
-      - ./common/:/app/helpers/
-      - ./cdn/storage:/app/storage
+      - ./common/:/app/openapi_server/helpers/
+      - ./cdn/storage:/app/openapi_server/storage
       - ./cdn:/app
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health_check"]
+      test: ["CMD", "curl", "-f", "--cert", "/app/ssl/cdn-cert.pem", "--key", "/app/ssl/cdn-key.pem", "--cacert", "/app/ssl/cdn-ca-cert.pem", "https://cdn/health_check"]
       interval: 15s
       timeout: 3s
       retries: 3
@@ -71,17 +71,16 @@ services:
     networks:
       - private_gachaandgames_network
 
-  ########################## REDIS (LOGGING)
+  ########################## REDIS
   redis:
-    image: redis:latest
+    build: ./redis/
     container_name: unipi-gatchaandgames-redis
-    ports:
-      - "6379:6379"
     volumes:
-      - redis_data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
+      - ./redis/ssl:/usr/local/etc/redis/ssl:ro
     restart: always
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "--tls", "--cert", "/usr/local/etc/redis/ssl/redis-cert.pem", "--key", "/usr/local/etc/redis/ssl/redis-key.pem", "--cacert", "/usr/local/etc/redis/ssl/cas/redis-ca-cert.pem", "-h", "redis", "ping"]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -849,7 +848,6 @@ networks:
   public_gachaandgames_network:
 volumes:
   loki_data:
-  redis_data:
   grafana_data:
   service_auth_db_proxy_data:
   service_auth_db_primary_data:
