--- a/db_manager/.env
+++ b/db_manager/.env
@@ -1,10 +1,11 @@
-MYSQL_HOST=db
-MYSQL_DB=gacha_test_db
-MYSQL_USER=gacha_test_user
-MYSQL_PASSWORD=gacha_test_password
-
 FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
+JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
 FLASK_DEBUG=1
 
 REQUESTS_TIMEOUT=3
 DATABASE_TIMEOUT=3
+
+MYSQL_HOST=db
+MYSQL_DB=gacha_test_db
+MYSQL_USER=gacha_test_user
+MYSQL_PASSWORD=gacha_test_password
