--- a/services/profile/.env
+++ b/services/profile/.env
@@ -1,4 +1,5 @@
 FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
+JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
 FLASK_DEBUG=1
 
 REQUESTS_TIMEOUT=3
