--- a/UNIT_TESTING/docker-compose.yml
+++ b/UNIT_TESTING/docker-compose.yml
@@ -89,15 +89,17 @@ services:
 
 
   # ########################## PROFILE
-  # service_profile:
-  #   image: service_profile
-  #   build: ./services/profile/
-  #   env_file: ./services/profile/.env
-  #   volumes:
-  #     - ./services/profile:/usr/src/app/
-  #     - ./common/:/usr/src/app/openapi_server/helpers/
-  #   tty: true
-  #   restart: always
+  service_profile:
+    image: service_profile
+    build: ./services/profile/
+    env_file: ./services/profile/.env
+    ports:
+      - "1004:443"
+    volumes:
+      - ./services/profile:/usr/src/app/
+      - ./common/:/usr/src/app/openapi_server/helpers/
+    tty: true
+    restart: always
 
 
   # ########################## PVP
