--- a/UNIT_TESTING/docker-compose.yml
+++ b/UNIT_TESTING/docker-compose.yml
@@ -9,7 +9,6 @@ services:
   #     - ./cdn:/app
   #   restart: always
 
-
   # ########################## AUTH
   service_auth:
     image: service_auth
@@ -23,7 +22,6 @@ services:
     tty: true
     restart: always
 
-  
   # ########################## AUCTION
   # service_auction:
   #   image: service_auction
@@ -34,7 +32,6 @@ services:
   #     - ./common/:/usr/src/app/openapi_server/helpers/
   #   tty: true
   #   restart: always
-
 
   # ########################## CURRENCY
   service_currency:
@@ -49,8 +46,7 @@ services:
     tty: true
     restart: always
 
-
-  ########################## FEEDBACK
+  # ########################## FEEDBACK
   service_feedback:
     image: service_feedback
     build: ./services/feedback/
@@ -63,18 +59,18 @@ services:
     tty: true
     restart: always
 
-
   # ########################## GACHA
-  # service_gacha:
-  #   image: service_gacha
-  #   build: ./services/gacha/
-  #   env_file: ./services/gacha/.env
-  #   volumes:
-  #     - ./services/gacha:/usr/src/app/
-  #     - ./common/:/usr/src/app/openapi_server/helpers/
-  #   tty: true
-  #   restart: always
-
+  service_gacha:
+    image: service_gacha
+    build: ./services/gacha/
+    env_file: ./services/gacha/.env
+    ports:
+      - "1003:443"
+    volumes:
+      - ./services/gacha:/usr/src/app/
+      - ./common/:/usr/src/app/openapi_server/helpers/
+    tty: true
+    restart: always
 
   # ########################## INVENTORY
   # service_inventory:
@@ -87,7 +83,6 @@ services:
   #   tty: true
   #   restart: always
 
-
   # ########################## PROFILE
   # service_profile:
   #   image: service_profile
@@ -98,7 +93,6 @@ services:
   #     - ./common/:/usr/src/app/openapi_server/helpers/
   #   tty: true
   #   restart: always
-
 
   # ########################## PVP
   # service_pvp:
