--- a/UNIT_TESTING/docker-compose.yml
+++ b/UNIT_TESTING/docker-compose.yml
@@ -60,17 +60,17 @@ services:
     restart: always
 
   # ########################## GACHA
-  service_gacha:
-    image: service_gacha
-    build: ./services/gacha/
-    env_file: ./services/gacha/.env
-    ports:
-      - "1003:443"
-    volumes:
-      - ./services/gacha:/usr/src/app/
-      - ./common/:/usr/src/app/openapi_server/helpers/
-    tty: true
-    restart: always
+  # service_gacha:
+  #   image: service_gacha
+  #   build: ./services/gacha/
+  #   env_file: ./services/gacha/.env
+  #   ports:
+  #     - "1003:443"
+  #   volumes:
+  #     - ./services/gacha:/usr/src/app/
+  #     - ./common/:/usr/src/app/openapi_server/helpers/
+  #   tty: true
+  #   restart: always
 
   # ########################## INVENTORY
   # service_inventory:
