--- a/UNIT_TESTING/docker-compose.yml
+++ b/UNIT_TESTING/docker-compose.yml
@@ -23,15 +23,17 @@ services:
     restart: always
 
   # ########################## AUCTION
-  # service_auction:
-  #   image: service_auction
-  #   build: ./services/auction/
-  #   env_file: ./services/auction/.env
-  #   volumes:
-  #     - ./services/auction:/usr/src/app/
-  #     - ./common/:/usr/src/app/openapi_server/helpers/
-  #   tty: true
-  #   restart: always
+  service_auction:
+    image: service_auction
+    build: ./services/auction/
+    env_file: ./services/auction/.env
+    ports:
+      - "1005:443"
+    volumes:
+      - ./services/auction:/usr/src/app/
+      - ./common/:/usr/src/app/openapi_server/helpers/
+    tty: true
+    restart: always
 
   # ########################## CURRENCY
   service_currency:
