--- a/cdn/.env
+++ b/cdn/.env
@@ -1,6 +1,8 @@
-FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
-JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
 FLASK_DEBUG=1
 
+FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
+JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
+
+CIRCUIT_BREAKER_FAILS=5
 REQUESTS_TIMEOUT=3
 DATABASE_TIMEOUT=3
