feat(compose). updated periods of health check for faster startup feat(auth): updated requirements for auth, fixed introspect bug, generic: updated .env files to include SERVICE_TYPE as environment variable feat(JWT): now auth has endpoint /auth/internal/token/invalidate to invalidate a token, is a delete that accepts a uuid parameter. JWT invalidation has been applied for these endpoints: delete_profile, ban_profile, edit_profile, admin edit profile. chores: Updated specs Possible bug: in admin/profile/{uuid}/edit, if I pass a uuid as query I get an error

--- a/services/feedback/.env
+++ b/services/feedback/.env
@@ -1,4 +1,5 @@
 FLASK_DEBUG=1
+SERVICE_TYPE=feedback
 
 FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
