--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: unipi-gatchaandgames-cdn
     env_file: ./cdn/.env
     volumes:
-      - ./common/:/app/openapi_server/helpers/
-      - ./cdn:/app
+      - ./cdn:/usr/src/app/
+      - ./common/:/usr/src/app/openapi_server/helpers/
     restart: always
     healthcheck:
-      test: ["CMD", "curl", "-f", "--cert", "/app/ssl/cdn-cert.pem", "--key", "/app/ssl/cdn-key.pem", "--cacert", "/app/ssl/cdn-ca-cert.pem", "https://cdn/health_check"]
+      test: ["CMD", "curl", "-f", "--cert", "/usr/src/app/ssl/cdn-cert.pem", "--key", "/usr/src/app/ssl/cdn-key.pem", "--cacert", "/usr/src/app/ssl/cdn-ca-cert.pem", "https://cdn/health_check"]
       interval: 15s
       timeout: 3s
       retries: 3
@@ -147,10 +147,10 @@ services:
       - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      start_period: 15s
+      start_period: 10s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     restart: always
   
   service_auth_db_replica:
@@ -172,7 +172,7 @@ services:
       start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     restart: always
   
   service_auth_db_proxy:
@@ -185,10 +185,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_auth_db_primary:
         condition: service_healthy
@@ -257,7 +257,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_auction_db_proxy:
@@ -270,10 +270,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_auction_db_primary:
         condition: service_healthy
@@ -342,7 +342,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_currency_db_proxy:
@@ -355,10 +355,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_currency_db_primary:
         condition: service_healthy
@@ -427,7 +427,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_feedback_db_proxy:
@@ -440,10 +440,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_feedback_db_primary:
         condition: service_healthy
@@ -512,7 +512,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_gacha_db_proxy:
@@ -525,10 +525,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_gacha_db_primary:
         condition: service_healthy
@@ -597,7 +597,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_inventory_db_proxy:
@@ -610,10 +610,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_inventory_db_primary:
         condition: service_healthy
@@ -682,7 +682,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_profile_db_proxy:
@@ -695,10 +695,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_profile_db_primary:
         condition: service_healthy
@@ -767,7 +767,7 @@ services:
   #     start_period: 5s
   #     interval: 3s
   #     timeout: 2s
-  #     retries: 15
+  #     retries: 20
   #   restart: always
   
   service_pvp_db_proxy:
@@ -780,10 +780,10 @@ services:
     - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
-      start_period: 10s
+      start_period: 5s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     depends_on:
       service_pvp_db_primary:
         condition: service_healthy
