--- a/services/auth/.env
+++ b/services/auth/.env
@@ -1,4 +1,5 @@
 FLASK_DEBUG=1
+SERVICE_TYPE=auth
 
 FLASK_SECRET_KEY=OraOraORA123StarPlatinumZAWARUDO!!MUDA2024WRYYYYYYGoldenExperienceRequiem
 JWT_SECRET_KEY=YourNextLineIs2024-DIOvsJoJo-ROADROLLERDA!!!WRYYYY-TimeIsStopped-Requiem
