--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
           sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
           sudo apt-get update
           sudo apt-get install docker-compose-plugin
+          
+      - name: Disable HTTPS certificate verification
+        run: |
+          export NODE_TLS_REJECT_UNAUTHORIZED=0
 
       - name: Build and run Docker containers
         run: |
