feat(certificates): updated certificates

--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -47,9 +47,9 @@ http {
         listen 443 ssl;
         server_name localhost;
         
-        ssl_certificate         /etc/nginx/ssl/apigateways-cert.pem;
-        ssl_certificate_key     /etc/nginx/ssl/apigateways-key.pem;
-        ssl_client_certificate  /etc/nginx/ssl/apigateways-ca-cert.pem;
+        ssl_certificate         /etc/nginx/ssl/apigw-public.crt;
+        ssl_certificate_key     /etc/nginx/ssl/apigw-public.key;
+        ssl_client_certificate  /etc/nginx/ssl/ca.crt;
         ssl_verify_client off;
 
         location /health_check {
