--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -27,9 +27,9 @@ http {
         listen 444 ssl;
         server_name localhost;
         
-        ssl_certificate         /etc/nginx/ssl/apigateways-cert.pem;
-        ssl_certificate_key     /etc/nginx/ssl/apigateways-key.pem;
-        ssl_client_certificate  /etc/nginx/ssl/apigateways-ca-cert.pem;
+        ssl_certificate         /etc/nginx/ssl/apigw-private.crt;
+        ssl_certificate_key     /etc/nginx/ssl/apigw-private.key;
+        ssl_client_certificate  /etc/nginx/ssl/ca.crt;
         ssl_verify_client off;
 
         location /health_check {
