--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,6 +1,6 @@
-port                0
-tls-port            6380
+port                6380
+tls-port            6379
 tls-cert-file       /usr/local/etc/redis/certs/redis.crt
 tls-key-file        /usr/local/etc/redis/certs/redis.key
 tls-ca-cert-file    /usr/local/etc/redis/certs/ca.crt
-tls-auth-clients    yes
+tls-auth-clients    no
