--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -102,7 +102,7 @@ services:
       - private_gachaandgames_network
       - public_gachaandgames_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "--cert", "/usr/src/app/ssl/admin-cert.pem", "--key", "/usr/src/app/ssl/admin-key.pem", "--cacert", "/usr/src/app/ssl/services-ca-cert.pem", "https://service_admin/admin/health_check"]
+      test: ["CMD", "curl", "-f", "--cert", "/usr/src/app/ssl/admin.crt", "--key", "/usr/src/app/ssl/admin.key", "--cacert", "/usr/src/app/ssl/ca.crt", "https://service_admin/admin/health_check"]
       start_period: 10s
       interval: 1m
       timeout: 2s
