--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -825,6 +825,9 @@ volumes:
   service_inventory_db_proxy_data:
   service_inventory_db_primary_data:
   service_inventory_db_replica_data:
+  service_profile_db_proxy_data:
+  service_profile_db_primary_data:
+  service_profile_db_replica_data:
   service_pvp_db_proxy_data:
   service_pvp_db_primary_data:
   service_pvp_db_replica_data:
